--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
   </head>
   <body>
     <script src="./js/blend-1/tasks.js" type="module"></script>
+    <ul>
+      <li>
+        <img class="gallery-item" src="" alt="">
+      </li>
+    </ul>
   </body>
 </html>
