--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <section><h1>2 Заняття</h1></section>
-    <!-- <script src="./js/blend-1/tasks.js" type="module"></script> -->
+    <script src="./js/blend-1/tasks.js" type="module"></script>
     <script src="./js/blend-2/tasks-2.js" type="module"></script>
 
     <!-- <script src="./js/blend-1/tasks.js" type="module"></script> -->
