--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <section><h1>3 Заняття Модуль 4-5</h1></section>
-    <!-- <script src="./js/blend-1/tasks.js" type="module"></script>
-    <script src="./js/blend-2/tasks-2.js" type="module"></script> -->
+    <!-- <script src="./js/blend-1/tasks.js" type="module"></script> -->
+    <script src="./js/blend-2/tasks-2.js" type="module"></script>
 
     <!-- <script src="./js/blend-1/tasks.js" type="module"></script> -->
 
