--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   <body>
     <section><h1>3 Заняття Модуль 4-5</h1></section>
     <!-- <script src="./js/blend-1/tasks.js" type="module"></script> -->
-    <script src="./js/blend-2/tasks-2.js" type="module"></script>
+    <!-- <script src="./js/blend-2/tasks-2.js" type="module"></script> -->
 
     <!-- <script src="./js/blend-1/tasks.js" type="module"></script> -->
 
     <!-- blend-3 -->
+    <script src="./js/blend-3/module-4/for-each-method.js" type="module"></script>
     <script src="./js/blend-3/module-4/modul-4.js" type="module"></script>
     <script src="./js/blend-3/module-5/module-5.js" type="module"></script>
   </body>
